storage/falcon/Cache.cpp
@@ -100,8 +100,7 @@ Cache::Cache(Database *db, int pageSz, int hashSz, int numBuffers)
 
 	flushBitmap = new Bitmap;
 	numberIoThreads = falcon_io_threads;
-	ioThreads = new Thread*[numberIoThreads];
-	memset(ioThreads, 0, numberIoThreads * sizeof(ioThreads[0]));
+	ioThreads = NULL;
 	flushing = false;
 	recovering = false;
 	
@@ -144,8 +143,7 @@ Cache::Cache(Database *db, int pageSz, int hashSz, int numBuffers)
 
 	validateCache();
 
-	for (int n = 0; n < numberIoThreads; ++n)
-		ioThreads[n] = database->threads->start("Cache::Cache", &Cache::ioThread, this);
+	startThreads();
 }
 
 Cache::~Cache()
@@ -790,6 +788,10 @@ void Cache::ioThread(void)
 	UCHAR *end = (UCHAR*) ((UIPTR) (rawBuffer + ASYNC_BUFFER_SIZE) / pageSize * pageSize);
 	flushLock.lock(Exclusive);
 	
+	// Update that a new IO thread has started. Use flushLock to protect this.
+
+	numberIoThreadsStarted++;
+
 	// This is the main loop.  Write blocks until there's nothing to do, then sleep
 	
 	for (;;)
@@ -1112,6 +1114,40 @@ void Cache::closeTraceFile(void)
 		traceFile = NULL;
 		}
 #endif
+}
+
+void Cache::startThreads()
+{
+	// Allocate memory for array with pointers to the IO threads
+
+	ioThreads = new Thread*[numberIoThreads];
+	memset(ioThreads, 0, numberIoThreads * sizeof(ioThreads[0]));
+	numberIoThreadsStarted = 0;
+
+	// Start the IO threads
+
+	for (int n = 0; n < numberIoThreads; ++n)
+		ioThreads[n] = database->threads->start("Cache::Cache", 
+												&Cache::ioThread, this);
+
+	// Wait for the IO threads to start
+
+	while (true)
+		{
+		// numberIoThreadsStarted is protected by using syncFlush
+
+		Sync sync(&syncFlush, "Cache::startThreads");
+		sync.lock(Exclusive);
+
+		if (numberIoThreadsStarted == numberIoThreads)
+			break;
+
+		sync.unlock();
+
+		// Take a short sleep to avoid busy-waiting
+
+		Thread::getThread("Cache::startThreads")->sleep(1);
+		}
 }
 
 void Cache::flushWait(void)
